# ros2-sgd4.0

./: .gitignore  README.md  clean_build.sh
localizer/: CMakeLists.txt  package.xml
localizer/include/localizer/: simple_gps_localizer.hpp
localizer/src/: simple_gps_localizer.cpp
navigation/: CMakeLists.txt  package.xml
navigation/include/: Filtern.hpp  aStern.hpp  way.hpp
navigation/include/navigation/: global_planner.hpp  navigator.hpp
navigation/maps/: 0_users.xml  20_Area_Ursprung.osm  20_NavigationsFaehigeDaten.osm  3_lohmuehlenpark.adr  3_lohmuehlenpark.nav  SharedGuideDog.sln
navigation/maps/old/: 0_Original_Ursprung.osm  20_NavigationsFaehigeDaten.osm
navigation/src/: Filtern.cpp  aStern.cpp  global_planner.cpp  main.cpp  navigator.cpp  way.cpp
sensors/gps/: CMakeLists.txt  package.xml
sensors/gps/data/: nmea.xml
sensors/gps/launch/: gps.launch.py
sensors/gps/params/: params.yaml
sensors/gps/src/: navilock_ublox6_gps.cpp  navilock_ublox6_parser.cpp  nmea_parser.cpp  publisher_gps_mock.cpp  sensor_gps.cpp  sensor_gps_transform.cpp
sgd_audio/: CMakeLists.txt  README.md  package.xml
sgd_audio/include/sgd_audio/: ros_audio.hpp  voice_messages.hpp
sgd_audio/src/: play_message.sh  ros_audio.cpp  voice_messages.cpp
sgd_controller/: CMakeLists.txt  global_planner_plugin.xml  package.xml  plugins.xml
sgd_controller/include/sgd_controller/: lidar_obstacle_checker.hpp  master_control_unit.hpp  subsum_controller.hpp
sgd_controller/plugins/: dubins.cpp  path_smoothing.cpp  sgd_dubins_planner.cpp  sgd_local_planner.cpp  sgd_progress_checker.cpp
sgd_controller/src/: lidar_obstacle_checker.cpp  master_control_unit.cpp  subsum_controller.cpp
sgd_costmap_plugins/: CMakeLists.txt  README.md  package.xml  static_vector_layer.xml
sgd_costmap_plugins/include/sgd_costmap_plugins/: circle_rasterizer.hpp  delaunator.hpp  static_vector_layer.hpp  triangle_rasterizer.hpp
sgd_costmap_plugins/src/: static_vector_layer.cpp  triangle_rasterizer.cpp
sgd_global_planner/: CMakeLists.txt  Readme.md  package.xml
sgd_global_planner/a_star_lib/: CMakeLists.txt
sgd_global_planner/a_star_lib/include/: a_star.hpp  a_star_node.hpp  a_star_path.hpp  a_star_users.hpp
sgd_global_planner/a_star_lib/src/: a_star.cpp  a_star_node.cpp  a_star_path.cpp  a_star_users.cpp
sgd_global_planner/include/sgd_global_planner/: a_star.hpp  a_star_node.hpp  a_star_path.hpp  a_star_users.hpp  adr_server.hpp  global_planner.hpp  navigator.hpp  path_smoothing.hpp
sgd_global_planner/maps/old/: 00_Lohmuehlenpark_augmentiert_V2.osm  01_Lohmuehlenpark_augmentiert_way.osm  02_Lohmuehlenpark_augmentiert_area.osm  10_FilterErgebnis.osm  10_Way_Ursprung.osm  11_Way_nachFiltern.osm  1_Original_nachFiltern.osm  21_Area_nachFiltern.osm  2_Original_wieEsNachDemFilternSollte.osm  30_EndNavigationOSM.osm  31_EndNavigation.osm
sgd_global_planner/src/: a_star.cpp  a_star_node.cpp  a_star_users.cpp  global_planner.cpp  navigator.cpp  path_smoothing.cpp  srv_client.cpp
sgd_global_planner/test/: unit_test_a_star.cpp
sgd_global_planner/test/data/: lohmuehlenpark.nav  users.xml
sgd_hardware_driver/feather_handle/: CMakeLists.txt  package.xml
sgd_hardware_driver/feather_handle/src/: bno055.cpp  feather_handle_ros.cpp  vl53l1x.cpp
sgd_hardware_driver/feather_handle/test/: unit_test_bno055.cpp
sgd_hardware_driver/gnss/: CMakeLists.txt  ntrip_auth  package.xml
sgd_hardware_driver/gnss/launch/: gps.launch.py
sgd_hardware_driver/gnss/src/: gnss_node.cpp  nmea_parser.cpp  ntrip_client.cpp
sgd_hardware_driver/gnss/test/: test_results.csv  ubx_parser.cpp  ubx_parser.hpp
sgd_hardware_driver/gps/: CMakeLists.txt  package.xml
sgd_hardware_driver/gps/launch/: gps.launch.py
sgd_hardware_driver/gps/lib/: CMakeLists.txt
sgd_hardware_driver/gps/params/: nmea_0183.xml  ubx.xml
sgd_hardware_driver/gps/src/: navilock_ublox6_gps.cpp  nmea_parser.cpp  ubx_parser.cpp
sgd_hardware_driver/gps/test/: node_test_navilock_ublox6.cpp
sgd_hardware_driver/laser_1d/: CMakeLists.txt  package.xml
sgd_hardware_driver/laser_1d/src/: laser_1d.cpp
sgd_hardware_driver/led_strips/: CMakeLists.txt  package.xml
sgd_hardware_driver/led_strips/src/: led_node.cpp
sgd_hardware_driver/motorcontroller/: CMakeLists.txt  Readme.md  package.xml
sgd_hardware_driver/uwb/: CMakeLists.txt  package.xml
sgd_io/: CMakeLists.txt  package.xml
sgd_io/src/: serial.cpp
sgd_io/test/: test_serial.cpp
sgd_lifecycle_manager/: CMakeLists.txt  Readme.md  package.xml
sgd_lifecycle_manager/params/: launch.xml
sgd_lifecycle_manager/src/: exit_publisher.cpp  lf_node_factory.cpp  lf_state_machine.cpp  lifecycle_manager.cpp
sgd_lifecycle_manager/test/: unit_test_lf_node_factory.cpp
sgd_local_costmap/: CMakeLists.txt  package.xml
sgd_local_planner/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
sgd_local_planner/src/: dubins.cpp  dubins_planner.cpp  sl_planner.cpp
sgd_localization/: CMakeLists.txt  Readme.md  package.xml
sgd_localization/src/: line.cpp  localizer_ros.cpp  obstacle.cpp  pose_estimator.cpp  scan_matcher.cpp
sgd_map_server/: CMakeLists.txt  CMakeLists.txt.old  README.md  package.xml  package.xml.old
sgd_map_server/src/: map_io.cpp  map_io_vector.cpp  map_mode.cpp  map_server.cpp  map_server_old.cpp
sgd_rasterizer/: CMakeLists.txt  README.md  package.xml
sgd_rasterizer/src/: circle_rasterizer.cpp  ray_rasterizer.cpp
sgd_rasterizer/test/: test_geotools.cpp
sgd_safety/: CMakeLists.txt  package.xml
sgd_safety/src/: depthCamera_obstacle_checker.cpp  lidar_obstacle_checker.cpp  obstacle_checker.cpp  ros2_depthCamera_obstacle_checker.cpp  ros2_obstacle_checker.cpp
sgd_safety/test/: laserscan.csv  launch_test.py  test_lidar_obstacle_checker_integ.cpp  test_obstacle_checker.cpp
sgd_util/: CMakeLists.txt  README.md  package.xml
sgd_util/launch/: serial_launch.py
sgd_util/src/: geotools.cpp  logger.cpp  scan_timer.cpp  serial.cpp  serial_mock.cpp  sgd_util.cpp  visualizer.cpp  wgs_to_local.cpp
sgd_util/test/: test_angle_utils.cpp  test_geotools.cpp
(+391 files in other folders)
