<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sgd_controller</name>
  <version>1.0.0</version>
  <description>SGD Controller package</description>
  <maintainer email="pascal.stahr@haw-hamburg.de">Pascal Stahr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecyclce</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sgd_util</depend>
  <depend>sgd_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugins.xml" />
    <nav2_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>
</package>
