<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sgd_costmap_plugins</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="pascal.stahr@haw-hamburg.de">Pascal Stahr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>sgd_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/static_vector_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
